[fix] dashboard user image jumping on load.

--- a/client/src/components/pages/Dashboard/helpers/UserPhoto/UserPhoto.scss
+++ b/client/src/components/pages/Dashboard/helpers/UserPhoto/UserPhoto.scss
@@ -18,6 +18,8 @@
     border-radius: 50%;
     display: block;
     width: 100px;
+    height: 100px;
+    object-fit: cover;
   }
 
   &__camera-icon {
