--- a/client/src/components/pages/Developers/helpers/ProfileItem.scss
+++ b/client/src/components/pages/Developers/helpers/ProfileItem.scss
@@ -34,10 +34,8 @@
   }
 
   &__image {
-    $imageDim: 100px;
-
-    width: $imageDim;
-    height: $imageDim;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     border-radius: 50%;
     box-shadow: 0 0 2px rgba($color: #000000, $alpha: 0.3);
