--- a/client/src/components/pages/Profile/helpers/ProfileDisplay/ProfileDisplay.scss
+++ b/client/src/components/pages/Profile/helpers/ProfileDisplay/ProfileDisplay.scss
@@ -4,8 +4,9 @@
   &__user-photo-wrapper {
     height: 100vh;
     position: relative;
-    background: url('../../../../../assets/images/nature-3--960-640--q50.jpg')
-      center;
+    // more readable
+    background-image: url('../../../../../assets/images/nature-3--960-640--q50.jpg');
+    background-position: center;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -56,7 +57,8 @@
     padding: 2em 1em 3em;
 
     @include at-small {
-      padding: calc(var(--nav-height) + 2em) 3em 2em;
+      // overflow issue
+      // padding: calc(var(--nav-height) + 2em) 3em 2em;
     }
   }
 
